# .dotfiles

./: .chezmoi.toml.tmpl  .chezmoiignore  .gitignore  BATOCERA.md  KEYMAPPING.md  LLM.md  README.md  WinUtilTweaks.json  WinUtilTweaks.ps1  com.joncrangle.llm.plist  dot_gitconfig.tmpl  dot_gtkrc-2.0  dot_zshenv  dot_zshenv.tmpl  dreamshaper-workflow-api.json  sdxl-workflow-api.json  setup_arch.sh  setup_mac.sh  setup_termux.sh  setup_win.ps1
.chezmoitemplates/glow/: catppuccin-mocha.json  glow.yml
.chezmoitemplates/lazygit/: config.yml
.chezmoitemplates/mise/: config.toml
.chezmoitemplates/nvim/: README.md  dot_gitignore  init.lua  lazy-lock.json
.chezmoitemplates/opencode/: opencode.jsonc
.chezmoitemplates/topgrade/: topgrade.toml
.chezmoitemplates/wezterm/: README.md  docker.lua  domains.lua  encrypted_domains.lua.age  podman.lua  tabline.lua  tabs.lua  wezterm.lua
.chezmoitemplates/yazi/: init.lua  keymap.toml  package.toml  theme.toml  yazi.toml
.chezmoitemplates/zed/: keymap.json  settings.json
dot_config/: brave-flags.conf  encrypted_BerkeleyMonoBold.ttf.age  encrypted_BerkeleyMonoItalic.ttf.age  executable_dot_macos  executable_ssh.sh  whkdrc
dot_config/.archive/: whkdrc
dot_config/aerospace/: aerospace.toml
dot_config/ags/: config.js  executable_bun.lockb  main.ts  options.json  options.ts  package.json
dot_config/btop/: btop.conf  btop.conf.tmpl
dot_config/cava/: config
dot_config/delta/: catppuccin.gitconfig  tokyonight_night.gitconfig
dot_config/fastfetch/: config.jsonc
dot_config/fonts/: encrypted_BerkeleyMono.ttf.age  encrypted_BerkeleyMonoBoldItalic.ttf.age  encrypted_TX-02-Bold-Condensed-Oblique.otf.age  encrypted_TX-02-Bold-Condensed.otf.age  encrypted_TX-02-Bold-Oblique.otf.age  encrypted_TX-02-Bold-SemiCondensed-Oblique.otf.age  encrypted_TX-02-Bold-SemiCondensed.otf.age  encrypted_TX-02-Bold.otf.age  encrypted_TX-02-Condensed-Oblique.otf.age  encrypted_TX-02-Condensed.otf.age  encrypted_TX-02-ExtraBold-Condensed-Oblique.otf.age  encrypted_TX-02-ExtraBold-Condensed.otf.age  encrypted_TX-02-ExtraBold-Oblique.otf.age  encrypted_TX-02-ExtraBold-SemiCondensed-Oblique.otf.age  encrypted_TX-02-ExtraBold-SemiCondensed.otf.age  encrypted_TX-02-ExtraBold.otf.age  encrypted_TX-02-Medium-Condensed-Oblique.otf.age  encrypted_TX-02-Medium-Condensed.otf.age  encrypted_TX-02-Medium-Oblique.otf.age  encrypted_TX-02-Medium-SemiCondensed-Oblique.otf.age  encrypted_TX-02-Medium-SemiCondensed.otf.age  encrypted_TX-02-Medium.otf.age  encrypted_TX-02-Oblique.otf.age  encrypted_TX-02-Regular.otf.age  encrypted_TX-02-Retina-Condensed-Oblique.otf.age  encrypted_TX-02-Retina-Condensed.otf.age  encrypted_TX-02-Retina-Oblique.otf.age  encrypted_TX-02-Retina-SemiCondensed-Oblique.otf.age  encrypted_TX-02-Retina-SemiCondensed.otf.age  encrypted_TX-02-Retina.otf.age  encrypted_TX-02-SemiCondensed-Oblique.otf.age  encrypted_TX-02-SemiCondensed.otf.age
dot_config/fuzzel/: fuzzel.ini
dot_config/gcloud/: encrypted_key.json.age
dot_config/ghostty/: config
dot_config/glow/: glow.yml.tmpl
dot_config/gtk-3.0/: settings.ini
dot_config/gtk-4.0/: private_settings.ini
dot_config/homebrew/: Brewfile
dot_config/hypr/: hypridle.conf  hyprland.conf  hyprland.lua  hyprlock.conf  hyprpaper.conf
dot_config/komorebi/: applications.json  applications.yaml  executable_WM.bat  executable_start.bat  komorebi.json
dot_config/linearmouse/: linearmouse.json
dot_config/skhd/: skhdrc
dot_glaze-wm/: config.yaml
dot_ssh/: encrypted_config.age
llm/: Modelfile  com.joncrangle.llm.plist  dreamshaper-workflow-api.json  flux-workflow-api.json  functions.json  model_configs.yaml  pony-workflow-api.json  pyproject.toml  tools.json
private_dot_ssh/: encrypted_config.age  encrypted_private_id_ed25519.age  id_ed25519.pub
(+506 files in other folders)
