[project]
name = "comfyui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.10.10",
    "argmaxtools>=0.1.14",
    "cmake>=3.30.4",
    "cstr",
    "diffusionkit>=0.4.0",
    "fairscale>=0.4.13",
    "gguf>=0.10.0",
    "gitpython>=3.1.43",
    "huggingface-hub>=0.25.2",
    "imageio>=2.35.1",
    "img2texture",
    "jaxtyping>=0.2.34",
    "joblib>=1.4.2",
    "kornia>=0.7.3",
    "matplotlib>=3.9.2",
    "matrix-client>=0.4.0",
    "mlx>=0.18.1",
    "numpy>=2.1.2",
    "piexif>=1.1.3",
    "pillow>=10.4.0",
    "psutil>=6.0.0",
    "pygithub>=2.4.0",
    "pyyaml>=6.0.2",
    "rich>=13.9.2",
    "safetensors>=0.4.5",
    "scipy>=1.14.1",
    "sentencepiece>=0.2.0",
    "soundfile>=0.12.1",
    "spandrel>=0.4.0",
    "tokenizers>=0.20.1",
    "toml>=0.10.2",
    "torch>=2.4.1",
    "torchaudio>=2.4.1",
    "torchsde>=0.2.6",
    "torchvision>=0.19.1",
    "tqdm>=4.66.5",
    "transformers>=4.45.2",
    "typer>=0.12.5",
    "typing-extensions>=4.12.2",
]

[tool.uv.sources]
img2texture = { git = "https://github.com/WASasquatch/img2texture.git" }
cstr = { git = "https://github.com/WASasquatch/cstr" }
comfyui-manager = { path = "./custom_nodes/ComfyUI-Manager/" }

[tool.uv.pip]
extra-index-url = ["https://download.pytorch.org/whl/cpu"]
